--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Cucumber steps (step definitions) written with Playwright for end-to-end (e2e) tests",
   "main": "index.js",
   "engines": {
-    "node": ">=8.x.x"
+    "node": ">=22.3.x"
   },
   "scripts": {
-    "install-all": "npm install && npm install cucumber@6.0.5 playwright --no-save",
-    "test": "",
+    "install:test-dependencies-old": "PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=true npm install && npx playwright install firefox",
+    "install:test-dependencies": "npm install && npx playwright install",
+    "test": "PO_FOLDER_PATH='tests/page-objects' node ./node_modules/.bin/cucumber-js --require cucumber.js --require index.js -f json:logs/cucumber_report.json --publish-quiet",
+    "test2": "PO_FOLDER_PATH='tests/page-objects' node ./node_modules/.bin/cucumber-js --require tests/setup/hooks.js --require index.js tests/features/**/*.feature -f json:logs/cucumber_report.json --publish-quiet",
+    "report": "node tests/reporters/reporter.js",
     "patch": "npm version patch -m \"Bump up package version to %s\" && git push && git push origin --tags && npm publish",
     "minor": "npm version minor -m \"Bump up package version to %s\" && git push && git push origin --tags && npm publish",
     "major": "npm version major -m \"Bump up package version to %s\" && git push && git push origin --tags && npm publish"
@@ -40,11 +43,16 @@
   "author": "Dmytro Shpakovskyi",
   "license": "MIT",
   "dependencies": {
-    "js-automation-tools": "^1.0.5"
+    "js-automation-tools": "^3.1.3"
   },
   "peerDependencies": {
-    "cucumber": ">=5.1.0",
-    "playwright": ">=1.8.0"
+    "@playwright/test": ">=1.57.0",
+    "playwright-bdd": ">=8.4.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@playwright/test": "^1.58.0",
+    "playwright-bdd": "^8.4.2",
+    "@types/node": "^24.10.1",
+    "node-testing-server": "^1.6.1"
+  }
 }
