--- a/.npmignore
+++ b/.npmignore
@@ -9,6 +9,15 @@ node_modules
 tests/screenshots
 
 *.DS_Store
+.vscode
+.idea
+dist
+.features-gen
+.cache
+test-results
+playwright-report
+cucumber-report
+blob-report
 .*
 !.travis.yml
 !.editorconfig
@@ -17,6 +26,4 @@ tests/screenshots
 .settings
 downloads
 *~
-.idea
-.vscode
 client_secret.json
