--- a/.editorconfig
+++ b/.editorconfig
@@ -11,8 +11,6 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = 120
 
-[*.json]
-indent_size = 2
-
-[*.yml]
+[*.{json,yml,feature}]
+indent_style = space
 indent_size = 2
